# Arc-agi-3-agent-

./: .gitignore  pyproject.toml  run.bat
configs/: default.yaml
docs/plans/: 2026-04-01-charith-agent-design.md  2026-04-01-charith-implementation-plan.md  2026-04-08-charith-full-stack-design.md  2026-04-08-charith-full-stack-plan.md
logs/: ar25_llm.json  cd82_llm.json  test_diagnostic.json
results/: transfer_experiment.json
scripts/: analyze_ls20.py  benchmark_speed.py  diagnose_game.py  diagnose_multi.py  evaluate_all_games.py  experiment_dual.py  experiment_transfer.py  meta_train.py  play_all.py  play_all_full_stack.py  play_full_stack.py  play_game_llm.py  play_single.py  pretrain_maze.py  probe_ls20_goal.py  render_ls20.py  reprobe_maze.py  solve_ls20.py
tests/: test_agent.py  test_causal_engine_analyzer.py  test_causal_engine_table.py  test_core_knowledge.py  test_fixtures_mock_env.py  test_frame_utils.py  test_full_stack_integration.py  test_full_stack_results.py  test_gamegen.py  test_goal_discovery.py  test_hypothesis_schema.py  test_integration.py  test_llm_agent.py  test_llm_reasoner.py  test_match_score.py  test_memory.py  test_mirror.py  test_mock_env.py  test_mock_llm.py  test_neural_world_model.py  test_object_tracker.py  test_ontology.py  test_percept_diff.py  test_phase1_explorer.py  test_phase2_hypothesizer.py  test_phase3_verifier.py  test_phase4_error_checker.py  test_phase5_planner.py  test_phase6_executor.py  test_probes.py  test_synthetic_realities.py  test_thompson.py  test_tokenizer.py  test_transformer.py  test_world_model.py
(+95 files in other folders)
